# AIF_Neuroshield

./: .gitignore  CLAUDE.md  LICENSE  build_plan_sprint_format.tex  design_doc.tex  tasks.tex
neuroshield/: .gitignore  README.md  pyproject.toml
neuroshield/app/: backend_client.py  dashboard.py  view_state.py
neuroshield/artifacts/demo/: software_acceptance.json
neuroshield/artifacts/metrics/: external_validation_notes.md  m1_loso_summary.json  (+11 more)
neuroshield/docs/: PROJECT_REPORT.md  build_roadmap.md  contracts.md  datasets.md  hardware_handoff.md  model_card_m1.md  model_card_m3_multihead.md  neuroshield_paper.tex  no_clinical_claims.md  prediction_spec.md  product_scope.md  software_acceptance.md  wesad_tuning_negative_result.md
neuroshield/scripts/: build_scoreboard.py  cache_wesad_features.py  software_acceptance.py  train_multihead.py  wesad_experiments.py  wesad_significance.py
neuroshield/tests/: test_api.py  test_artifact.py  test_axes.py  test_backend_client.py  test_baseline.py  test_dashboard.py  test_dynamics.py  test_events_to_bundle.py  test_explain.py  test_external_validation.py  test_features.py  test_harmonize.py  test_labels.py  test_multihead.py  test_nurse_insights.py  test_nurse_stress_loader.py  test_personalize.py  test_quality_gate.py  test_replay_source.py  test_scoreboard.py  test_status.py  test_stress_predict_loader.py  test_synthetic_source.py  test_train_m1.py  test_view_state.py  test_wesad_loader.py
neuroshield/web/: .env.example  README.md  next-env.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+48 files in other folders)
