[project]
name = "neuroshield"
version = "0.1.0"
description = "Software-first MVP for NeuroShield: stress-proxy detection from wearable-style signals."
requires-python = ">=3.10"
dependencies = [
    "cvxopt>=1.3.3",
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "neurokit2>=0.2.13",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pyserial>=3.5",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
